--- a/css/style-pages.css
+++ b/css/style-pages.css
@@ -249,13 +249,10 @@
 .lqd-header-covid {
     background-color: lightgrey;
     padding-top: 2vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
     padding-bottom: 1.5vw;
     margin-bottom: 1vw;
-}
-
-.lqd-header-covid .row {
-    margin-left: 0;
-    margin-right: 0;
 }
 
 .lqd-header-covid-text {
@@ -267,8 +264,6 @@
     border: 2px solid black;
     background-color: lightgrey !important;
     margin-top: auto;
-    font-size: 1.4rem;
-    line-height: 2rem;
     white-space: nowrap;
     color: black;
     border-radius: 42px;
