- Removing outdated html5shiv. - Minor code formatting improvements in functions.php.

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a.lqd-header-btn:hover {
     filter: brightness(0.9);
 }
 
-/* HEADER MENU */
+/* Header: Menu */
 .lqd-header-menu {
     background-color: #14a7e0;
 }
