--- a/css/lqd-messages.css
+++ b/css/lqd-messages.css
@@ -38,7 +38,7 @@
     padding-right: 60px;
 }
 
-.gc-individual-sermon-list {
+.lqdm-individual-msg-list {
     padding-left: 45px;
     padding-right: 45px;
 }
@@ -105,7 +105,7 @@ a.home-btn {
     margin-bottom: 10px;
 }
 
-#message-summary .gc-right-col {
+#message-summary .lqdm-right-col {
     text-align: justify;
 }
 
@@ -113,7 +113,7 @@ a.home-btn {
     padding: 0;
 }
 
-.entry-content ul.lc-container li.gc-sermon-resources-list-item {
+.entry-content ul.lc-container li.lqdm-resources-list-item {
     display: list-item !important;
     list-style-type: disc !important;
     padding-left: 15px;
@@ -136,14 +136,14 @@ a.home-btn {
     vertical-align: top;
 }
 
-.entry-content ul.gc-sermon-resources-list li.gc-sermon-resources-list-item {
+.entry-content ul.gc-sermon-resources-list li.lqdm-resources-list-item {
     width: 100%;
     display: inline-block;
     margin-right: 20px;
     margin-bottom: 0;
 }
 
-.entry-content ul.gc-sermon-resources-list ul.single-item li.gc-sermon-resources-list-item {
+.entry-content ul.gc-sermon-resources-list ul.single-item li.lqdm-resources-list-item {
     width: 100%;
 }
 
@@ -151,33 +151,33 @@ a.home-btn {
     margin-top: 10px;
 }
 
-h1.gc-sermon-title {
+h1.lqm-msg-title {
     margin-top: 30px;
     font-size: 32px;
 }
 
-.entry-content .gc-individual-sermon-list .gc-sermons-list {
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list {
     padding-top: 5px;
     display: table;
     margin: 0 auto;
 	padding-right: 0;
 }
 
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(1) {
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(1):nth-last-child(1) {
     width: inherit !important;
 }
 
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(2),
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(2):nth-last-child(1)  {
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(1):nth-last-child(2),
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(2):nth-last-child(1)  {
     width: inherit !important;
 }
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(1):nth-last-child(3),
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(2):nth-last-child(2),
-.entry-content .gc-individual-sermon-list .gc-sermons-list li:nth-child(3):nth-last-child(1)  {
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(1):nth-last-child(3),
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(2):nth-last-child(2),
+.entry-content .lqdm-individual-msg-list .lqdm-msgs-list li:nth-child(3):nth-last-child(1)  {
     width: inherit !important;
 }
 
-.gc-series-wrap h4 {
+.lqdm-series-wrap h4 {
     margin-left: 30px;
     border-bottom: none !important;
     text-decoration: underline;
@@ -194,7 +194,7 @@ h1.gc-sermon-title {
     padding-bottom:5px;
 }
 
-#mav-entry li.gc-item.gc-thumb {
+#mav-entry li.lqdm-item.lqdm-thumb {
     padding-top: 0;
     padding-bottom: 0;
     margin-bottom: 0;
@@ -300,11 +300,11 @@ h1.gc-sermon-title {
     margin-bottom:0;
 }
 
-#mav-single .gc-sermon-resources-list-item {
+#mav-single .lqdm-resources-list-item {
     line-height:.9em;
 }
 
-#mav-single .gc-item.gc-thumb {
+#mav-single .lqdm-item.lqdm-thumb {
     padding:0;
     margin-bottom:0;
 }
